2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Choose default source extension: AM_DEFAULT_SOURCE_EXT.
	* automake.in (handle_source_transform): Accept unconditional
	literal extension in AM_DEFAULT_SOURCE_EXT as override for the
	default source extension `.c'.  If set, ignore the old default
	source rule for libtool libraries.
	* doc/automake.texi (Default _SOURCES): Document this.
	* NEWS: Update.
	* tests/specflg10.test: New test.
	* tests/Makefile.am: Update.
	Suggestion by Akim Demaille.

	Fix maintainer-check failure.
	* tests/parallel-am.test: Rename variable to not match pattern
	used in maintainer-check.

2008-10-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Fix typo.
	Spotted by Jim Meyering.

2008-10-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Parallel automake --add-missing: serialized file installs.
	* automake.in (QUEUE_CONF_FILE, QUEUE_LOCATION, QUEUE_STRING):
	New serialization keys.
	($required_conf_file_queue): New file global.
	(queue_required_conf_file, require_queued_conf_file): New
	functions, to queue and dequeue requirements for aux dir files.
	(require_conf_file): Enqueue if needed.
	(get_number_of_threads): Can do threads with --add-missing now.
	(handle_makefiles_threaded): Let worker threads enqueue, let
	master attend to queued requirements at the right time.
	* tests/parallel-am.test: Explain the purpose of the include
	chain used here.
	* tests/parallel-am2.test: Also cope with --add-missing.
	* tests/parallel-am3.test: New test, test absence of races with
	concurrent same-file installs stemming from --add-missing.
	* tests/Makefile.am: Adjust.

	Implement serialization for Locations.
	* lib/Automake/Location.pm (serialize, deserialize): New
	functions.  They allows to serialize a Location in an array, and
	to restore a Location from a thread queue.  The API is
	unsymmetric (array vs. queue) because enqueuing data needs to
	happen atomically.

	Parallel automake: ordered output messages.