@@ -143,6 +143,9 @@
 
 * Run ./bootstrap, ./configure, make.
 
+* Run `make release-stats' if release statistics in doc/automake.texi
+  have not been updated yet.
+
 * NOTE: the next step has not been tested yet with git, so be careful.
 
 * Run `make git-release'.
