@@ -1,5 +1,11 @@
 2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	New maintainer target release-stats.
+	* Makefile.am (release-stats): New target, to help computing the
+	entries in the statistics table in automake.texi.
+	* doc/automake.texi (Releases): Reformat a bit.  Add number of
+	generated files.  Add entry for 1.10.1.
+
 	Choose default source extension: AM_DEFAULT_SOURCE_EXT.
 	* automake.in (handle_source_transform): Accept unconditional
 	literal extension in AM_DEFAULT_SOURCE_EXT as override for the
